--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -100,7 +100,7 @@ input, select, textarea {
 
 	body, input, select, textarea {
 		color: #787878;
-		font-family: "Noto Serif SC", "Source Sans Pro", Helvetica, sans-serif;
+		font-family: "Source Sans Pro", Helvetica, sans-serif;
 		font-size: 16pt;
 		font-weight: 400;
 		line-height: 1.75em;
@@ -128,7 +128,7 @@ input, select, textarea {
 
 	strong, b {
 		color: #363B40;
-		font-weight: 600;
+		font-weight: 400;
 	}
 
 	em, i {
@@ -141,7 +141,7 @@ input, select, textarea {
 
 	h1, h2, h3, h4, h5, h6 {
 		color: #363B40;
-		font-weight: 600;
+		font-weight: 400;
 		line-height: 1em;
 		margin: 0 0 1em 0;
 	}
