--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,7 @@
 /* @import url("fontawesome-all.min.css"); */
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic");
 @import url("https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@300;400;600&display=swap");
+@import url("fontawesome-all.min.css");
 
 /*
 	Strata by HTML5 UP
